# Cpp-hotel

./: CMakeCache.txt  CMakeLists.txt  Makefile  asddassadsdasad.cpp  clock.cpp  cmake_install.cmake  main.cpp  settings.ini
